<resources>
    <string name="app_name">SafePass</string>

    <string name="first_textview_menu">SafePass</string>
    <string name="menu_string_generer"> Generate </string>
    <string name="menu_sauveugarder"> Save </string>
    <string name="menu_noter">Rate</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">JerrykelJosephDev.fr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="switchCustomGenerate">Default</string>
    <string name="generatebtnText">Generate</string>
    <string name="passLengthTxtView">length</string>
    <string name="toastText">Add  to Clipboard..</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_draw">DrawActivity</string>
    <string name="AllCategory">All Folder</string>
    <string name="add_category">Add Folder</string>
    <string name="add_note">Add Note</string>
    <string name="description">Description(optionnal)</string>
    <string name="note_title">Note title</string>
    <string name="t3">T3</string>
    <string name="category_name">Folder Name</string>
    <string name="textview">TextView</string>
    <string name="add_new_note_entry">ADD new Note Entry</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="username_or_identifiant">Username or Identifiant</string>
    <string name="homepage_optional">HomePage(optional)</string>
    <string name="commentaire_optional">Commentaire(optional)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="special_chars">Special chars</string>
    <string name="number">Numbers</string>
    <string name="uppercase">Uppercase</string>
    <string name="lowercase">Lowercase</string>
    <string name="default_blabla">Default blabla</string>
    <string name="as_default_genarate_a_aleatoire">As Default Genarate a aleatoire</string>
    <string name="secure_password_app">Secure password app</string>
    <string name="connection">Connection</string>
    <string name="identifiant">ID or Username</string>
    <string name="mot_de_passe">Password</string>
    <string name="confirmer_mot_de_passe">Confirme Password</string>
    <string name="answer">Answer</string>
    <string name="s_inscrire">Sign in</string>
    <string name="all_note">All Note</string>
    <string name="Success">Succes</string>
    <string name="choice_color">Choice Color</string>
    <string name="Recycler">recycler</string>
    <string name="configuration">Configuration</string>
    <string name="communication">communication</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="text_select_category">Select Category</string>
    <string name="dialog_select_Category_restaurer">RESTAURER</string>
    <string name="text_add_note_modele">Add note modele</string>
    <string name="total_categories">Total Categories</string>
    <string name="total_note">Total Note</string>
    <string name="delete">Delete</string>
    <string name="delete_history">Clear history</string>
    <string name="Enlarge">Enlarge</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="homepage">HomePage</string>
    <string name="commentaire">Comment</string>
    <string name="export_to_file">Export to File</string>
    <string name="save_file_to_sdcard">Save File To SDCARD</string>
    <string name="select_all">select All</string>
    <string name="options">options</string>
    <string name="itemSelected">Item Selected</string>
    <string name="itemSelecteds">Items Selected</string>
    <string name="edit">edit</string>
    <string name="test_sms_program">sms program</string>


</resources>