<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/activity_main_drawer_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/activity_main_drawer_recycler"
        android:icon="@drawable/ic_baseline_delete_black_24"
        android:title="@string/Recycler" />

    <item android:title="@string/configuration">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_choice_color"
                    android:icon="@drawable/ic_account_box_white_24dp"
                    android:title="@string/choice_color" />
                <item
                    android:id="@+id/activity_main_drawer_settings"
                    android:icon="@drawable/ic_baseline_settings_black_24"
                    android:title="@string/action_settings" />
            </group>
        </menu>
    </item>
    <item android:title="@string/communication">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_rate_us"
                    android:icon="@drawable/ic_baseline_comment_back_24"
                    android:title="@string/rate_us"/>
                <item
                    android:id="@+id/activity_main_drawer_share"
                    android:icon="@drawable/ic_baseline_share_black_24"
                    android:title="@string/share"/>
            </group>
        </menu>
    </item>
</menu>