<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E43F3F"
    tools:context=".vue.save.createLogin.ConnectActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/connection"

            android:textSize="30sp"
            android:textColor="#fff"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:layout_margin="30sp">
        <EditText
            android:id="@+id/Identifiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/identifiant_icone"
            android:hint="@string/identifiant"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/editext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/mot_de_passe"
            android:drawableStart="@drawable/password_icone"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/Password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmer_mot_de_passe"
            android:drawableStart="@drawable/password_icone"
            android:inputType="textPassword"/>
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:gravity="center|center_horizontal|center_vertical"
            android:textAlignment="center" />
        <EditText
            android:id="@+id/Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer"
            android:drawableStart="@drawable/question_answer_24"
            android:inputType="textEmailAddress"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/s_inscrire"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            />

    </LinearLayout>


</LinearLayout>