<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.AppActivity.ActivityAddNewNote"
    android:orientation="vertical"
    >
    <!-- android:theme="?attr/actionBarTheme". -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/EditTextNoteTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/title"
                    android:inputType="text" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/EditTextNoteUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/username_or_identifiant"
                    android:inputType="text" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="@string/password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/EditTextPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <ImageButton
                        android:id="@+id/imageButtonAddNewCategory2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:background="@color/myColorTransparent"
                        app:srcCompat="@drawable/ic_baseline_visibility_off_black_24" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewHomepage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/homepage" />

                <EditText
                    android:id="@+id/EditTextHomepage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/homepage_optional"
                    android:inputType="text" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="10sp"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:padding="16sp">


                <Button
                    android:id="@+id/buttonSaveNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/save" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewNoteCommentaire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/commentaire" />

                <EditText
                    android:id="@+id/EdiTextNoteCommentaire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/commentaire_optional"
                    android:inputType="textMultiLine|text" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="TextView" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>