<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.AppActivity.Save.ActivityAddCategory"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/uno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentTop="true"
        android:layout_gravity="center|center_horizontal|center_vertical"

        android:layout_marginBottom="20sp"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="80dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:background="#77B3D5"
                android:drawableLeft="@mipmap/new_icone_round"
                android:drawablePadding="0dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/add_category"
                android:textColor="#FFF"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/EditextcategorieDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/EditTextCategoryName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/category_name" />

                    <EditText
                        android:id="@+id/EditTextCategoryDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"

                        android:hint="@string/description" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="100sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CBD0D8"
            android:text="@string/cancel"
            android:textColor="#FFF"
            android:layout_gravity="center|center_horizontal|center_vertical"
            />
        <Space
            android:layout_width="12sp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#5fbf9a"
            android:text="@string/save"
            android:textColor="#FFF" />
    </LinearLayout>


</LinearLayout>