<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginBottom="3dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2">

            <LinearLayout
                android:id="@+id/linearLayoutTextViewNoteIndicatif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|center_horizontal"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textViewNoteIndicatif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_green_shape"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/t3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutActionModeItemSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end|right"
                android:gravity="bottom|center|right"
                android:orientation="horizontal"
                android:visibility="invisible">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_black_shape"
                    app:srcCompat="@drawable/ic_baseline_check_white_24"
                    tools:ignore="VectorDrawableCompat" />
            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewNoteTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/note_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewNoteUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/description"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_weight="0.1"
                android:gravity="center|center_horizontal|right">

                <ImageButton
                    android:id="@+id/imageViewRatebarSaveItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/myColorTransparent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_favorite_border_black_24"
                    tools:ignore="VectorDrawableCompat" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>